Fix content overflow on mobile

--- a/warehouse/static/sass/blocks/_project-description.scss
+++ b/warehouse/static/sass/blocks/_project-description.scss
@@ -29,6 +29,7 @@
   &__main {
     flex: 1;
     min-width: 0;
+    max-width: 100%;
 
     > *:first-child {
       margin-top: 0;
